[gd_scene load_steps=16 format=3 uid="uid://ckueucjs1nwf3"]

[ext_resource type="Script" path="res://Scenes/mini_games/desktop_matching/match_game_manager.gd" id="1_0xnwf"]
[ext_resource type="Script" path="res://Scenes/mini_games/desktop_matching/pair.gd" id="2_lge7s"]
[ext_resource type="Texture2D" uid="uid://berygyrnrk0u5" path="res://Assets/StanfordAssets/Card_back.png" id="3_hhyvw"]
[ext_resource type="Script" path="res://Scenes/mini_games/desktop_matching/matching_object.gd" id="4_nsjif"]
[ext_resource type="Texture2D" uid="uid://dg850in2jf3d" path="res://Card_front.png" id="5_xtxdn"]
[ext_resource type="Texture2D" uid="uid://c4jko5jnnpkg5" path="res://Assets/StanfordAssets/checklist.png" id="6_dp5pl"]
[ext_resource type="Texture2D" uid="uid://mvix0xvqasmw" path="res://Assets/StanfordAssets/magnifying_glass.png" id="7_rlax6"]
[ext_resource type="Texture2D" uid="uid://bnmarmnacxlxl" path="res://Assets/StanfordAssets/custom-illustrations-stanford-monuments-assets-08.png" id="8_i6xat"]
[ext_resource type="Texture2D" uid="uid://cwcxsfslcneqx" path="res://Assets/StanfordAssets/puzzle_piece.png" id="9_5sujp"]
[ext_resource type="Texture2D" uid="uid://bk1e6mbabiw36" path="res://Assets/StanfordAssets/custom-illustrations-stanford-monuments-assets-22.png" id="9_lyuf3"]
[ext_resource type="Texture2D" uid="uid://dwws10go58xox" path="res://Assets/StanfordAssets/megaphone.png" id="10_bx1vf"]
[ext_resource type="Texture2D" uid="uid://dt7sy0crl46pu" path="res://Assets/StanfordAssets/target.png" id="11_u0tca"]
[ext_resource type="Texture2D" uid="uid://bovqulmlnpff" path="res://Assets/StanfordAssets/chicken.png" id="13_km731"]

[sub_resource type="LabelSettings" id="LabelSettings_o70vy"]
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v5vuo"]
font_size = 111
font_color = Color(0, 0, 0, 1)

[node name="MiniGame" type="Node2D"]
script = ExtResource("1_0xnwf")

[node name="EdgeBackground" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.678431, 0.4, 0.878431, 1)

[node name="FrontBackground" type="ColorRect" parent="."]
offset_left = 64.0
offset_top = 148.0
offset_right = 1886.0
offset_bottom = 1048.0
color = Color(0.760784, 0.592157, 0.984314, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 557.0
offset_top = 159.0
offset_right = 1343.0
offset_bottom = 250.0
grow_horizontal = 2
text = "Match the image to its related word"
label_settings = SubResource("LabelSettings_o70vy")
horizontal_alignment = 1

[node name="Pair 1" type="Node2D" parent="." node_paths=PackedStringArray("card_1", "card_2")]
position = Vector2(435, 290)
scale = Vector2(2.23457, 1.58279)
script = ExtResource("2_lge7s")
card_1 = NodePath("Card 1")
card_2 = NodePath("Card 2")

[node name="Card 1" type="TextureButton" parent="Pair 1"]
offset_left = -50.5691
offset_top = -38.5396
offset_right = 885.431
offset_bottom = 871.46
scale = Vector2(0.12055, 0.140245)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Label" type="Label" parent="Pair 1/Card 1"]
visible = false
offset_left = 306.924
offset_top = 45.5499
offset_right = 1059.92
offset_bottom = 230.55
rotation = 0.954598
text = "Regulations"
label_settings = SubResource("LabelSettings_v5vuo")
horizontal_alignment = 1

[node name="Card 2" type="TextureButton" parent="Pair 1"]
offset_left = -51.0166
offset_top = 90.9784
offset_right = 884.983
offset_bottom = 1000.98
scale = Vector2(0.11905, 0.140821)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")
metadata/_edit_use_anchors_ = true

[node name="Card Image" type="Sprite2D" parent="Pair 1/Card 2"]
visible = false
position = Vector2(454.844, 385.84)
scale = Vector2(0.763554, 0.898477)
texture = ExtResource("6_dp5pl")

[node name="Pair 2" type="Node2D" parent="." node_paths=PackedStringArray("card_1", "card_2")]
position = Vector2(738, 290)
scale = Vector2(2.005, 1.583)
script = ExtResource("2_lge7s")
card_1 = NodePath("Card 3")
card_2 = NodePath("Card 4")

[node name="Card 3" type="TextureButton" parent="Pair 2"]
offset_left = 125.187
offset_top = -38.3882
offset_right = 1061.19
offset_bottom = 871.612
scale = Vector2(0.133778, 0.139904)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Label" type="Label" parent="Pair 2/Card 3"]
visible = false
offset_left = 302.453
offset_top = 30.4788
offset_right = 1055.45
offset_bottom = 215.479
rotation = 0.954598
text = "Monitoring"
label_settings = SubResource("LabelSettings_v5vuo")
horizontal_alignment = 1

[node name="Card 4" type="TextureButton" parent="Pair 2"]
offset_left = 291.272
offset_top = -38.5941
offset_right = 1227.27
offset_bottom = 871.406
scale = Vector2(0.131717, 0.140357)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Card Image" type="Sprite2D" parent="Pair 2/Card 4"]
visible = false
position = Vector2(454.385, 391.988)
scale = Vector2(0.564662, 0.701124)
texture = ExtResource("7_rlax6")

[node name="Pair3" type="Node2D" parent="." node_paths=PackedStringArray("card_1", "card_2")]
script = ExtResource("2_lge7s")
card_1 = NodePath("Card 5")
card_2 = NodePath("Card 6")

[node name="Card 5" type="TextureButton" parent="Pair3"]
offset_left = 1322.0
offset_top = 433.0
offset_right = 2258.0
offset_bottom = 1343.0
scale = Vector2(0.27297, 0.228385)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Label" type="Label" parent="Pair3/Card 5"]
visible = false
offset_left = 299.832
offset_top = 17.2588
offset_right = 1064.83
offset_bottom = 202.259
rotation = 0.954598
text = "Assessment"
label_settings = SubResource("LabelSettings_v5vuo")
horizontal_alignment = 1

[node name="Card 6" type="TextureButton" parent="Pair3"]
offset_left = 655.0
offset_top = 436.0
offset_right = 1591.0
offset_bottom = 1346.0
scale = Vector2(0.270299, 0.22967)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Card Image" type="Sprite2D" parent="Pair3/Card 6"]
visible = false
position = Vector2(447.655, 404.929)
scale = Vector2(0.09, 0.09)
texture = ExtResource("9_lyuf3")

[node name="Pair4" type="Node2D" parent="." node_paths=PackedStringArray("card_1", "card_2")]
script = ExtResource("2_lge7s")
card_1 = NodePath("Card 7")
card_2 = NodePath("Card 8")

[node name="Card 7" type="TextureButton" parent="Pair4"]
offset_left = 656.0
offset_top = 644.0
offset_right = 1592.0
offset_bottom = 1554.0
scale = Vector2(0.270433, 0.220967)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Label" type="Label" parent="Pair4/Card 7"]
visible = false
offset_left = 298.424
offset_top = 18.4868
offset_right = 1072.42
offset_bottom = 203.487
rotation = 0.954598
text = "Interactivity"
label_settings = SubResource("LabelSettings_v5vuo")
horizontal_alignment = 1

[node name="Card 8" type="TextureButton" parent="Pair4"]
offset_left = 651.0
offset_top = 231.0
offset_right = 1587.0
offset_bottom = 1141.0
scale = Vector2(0.267628, 0.221703)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Card Image" type="Sprite2D" parent="Pair4/Card 8"]
visible = false
position = Vector2(458.297, 412.722)
scale = Vector2(0.618436, 0.759247)
texture = ExtResource("9_5sujp")

[node name="Pair5" type="Node2D" parent="." node_paths=PackedStringArray("card_1", "card_2")]
script = ExtResource("2_lge7s")
card_1 = NodePath("Card 9")
card_2 = NodePath("Card 10")

[node name="Card 9" type="TextureButton" parent="Pair5"]
offset_left = 323.0
offset_top = 641.0
offset_right = 1259.0
offset_bottom = 1551.0
scale = Vector2(0.264957, 0.21978)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Label" type="Label" parent="Pair5/Card 9"]
visible = false
offset_left = 297.418
offset_top = 37.0315
offset_right = 1050.42
offset_bottom = 222.031
rotation = 0.954598
text = "Promotion"
label_settings = SubResource("LabelSettings_v5vuo")
horizontal_alignment = 1

[node name="Card 10" type="TextureButton" parent="Pair5"]
offset_left = 988.75
offset_top = 636.46
offset_right = 1924.75
offset_bottom = 1546.46
scale = Vector2(0.269765, 0.220967)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Card Image" type="Sprite2D" parent="Pair5/Card 10"]
visible = false
position = Vector2(460.585, 400.693)
scale = Vector2(0.69505, 0.78667)
texture = ExtResource("10_bx1vf")

[node name="Pair6" type="Node2D" parent="." node_paths=PackedStringArray("card_1", "card_2")]
script = ExtResource("2_lge7s")
card_1 = NodePath("Card 11")
card_2 = NodePath("Card 12")

[node name="Card 11" type="TextureButton" parent="Pair6"]
offset_left = 989.0
offset_top = 433.0
offset_right = 1925.0
offset_bottom = 1343.0
scale = Vector2(0.264957, 0.221978)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Label" type="Label" parent="Pair6/Card 11"]
visible = false
offset_left = 410.919
offset_top = -29.6243
offset_right = 1163.92
offset_bottom = 340.376
rotation = 1.00732
text = "Target
Audience"
label_settings = SubResource("LabelSettings_v5vuo")
horizontal_alignment = 1

[node name="Card 12" type="TextureButton" parent="Pair6"]
offset_left = 1323.0
offset_top = 636.0
offset_right = 2259.0
offset_bottom = 1546.0
scale = Vector2(0.267094, 0.217582)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Card Image" type="Sprite2D" parent="Pair6/Card 12"]
visible = false
position = Vector2(475.49, 395.254)
scale = Vector2(0.12528, 0.182027)
texture = ExtResource("11_u0tca")

[node name="Pair7" type="Node2D" parent="." node_paths=PackedStringArray("card_1", "card_2")]
script = ExtResource("2_lge7s")
card_1 = NodePath("Card 13")
card_2 = NodePath("Card 14")

[node name="Card 13" type="TextureButton" parent="Pair7"]
offset_left = 323.0
offset_top = 842.0
offset_right = 1259.0
offset_bottom = 1752.0
scale = Vector2(0.266026, 0.216483)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Label" type="Label" parent="Pair7/Card 13"]
visible = false
offset_left = 286.28
offset_top = 28.146
offset_right = 1039.28
offset_bottom = 213.146
rotation = 0.954598
text = "Scheduling"
label_settings = SubResource("LabelSettings_v5vuo")
horizontal_alignment = 1

[node name="Card 14" type="TextureButton" parent="Pair7"]
offset_left = 1324.0
offset_top = 833.804
offset_right = 2260.0
offset_bottom = 1743.8
scale = Vector2(0.269231, 0.213618)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Card Image" type="Sprite2D" parent="Pair7/Card 14"]
visible = false
position = Vector2(471.716, 417.547)
scale = Vector2(0.22, 0.22)
texture = ExtResource("8_i6xat")

[node name="Pair8" type="Node2D" parent="." node_paths=PackedStringArray("card_1", "card_2")]
position = Vector2(5, 0)
script = ExtResource("2_lge7s")
card_1 = NodePath("Card 15")
card_2 = NodePath("Card 16")

[node name="Card 15" type="TextureButton" parent="Pair8"]
offset_left = 983.0
offset_top = 839.25
offset_right = 1919.0
offset_bottom = 1749.25
scale = Vector2(0.267094, 0.212638)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Label" type="Label" parent="Pair8/Card 15"]
visible = false
offset_left = 312.809
offset_top = 39.7114
offset_right = 1065.81
offset_bottom = 224.711
rotation = 0.954598
text = "Catering"
label_settings = SubResource("LabelSettings_v5vuo")
horizontal_alignment = 1

[node name="Card 16" type="TextureButton" parent="Pair8"]
offset_left = 650.602
offset_top = 842.17
offset_right = 1586.6
offset_bottom = 1752.17
scale = Vector2(0.267945, 0.219407)
texture_normal = ExtResource("3_hhyvw")
script = ExtResource("4_nsjif")
card_image = ExtResource("5_xtxdn")
hide_image = ExtResource("3_hhyvw")

[node name="Card Image" type="Sprite2D" parent="Pair8/Card 16"]
visible = false
position = Vector2(475.465, 386.633)
scale = Vector2(0.692481, 0.872381)
texture = ExtResource("13_km731")

[node name="CheckPairTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="CheckPairTimer" to="." method="_on_timer_timeout"]
